[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tcwindfields"
version = "0.1.0"
description = "Parametric tropical cyclone 2D wind and pressure fields"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "shapely",
    "xarray",
    "pandas",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/EmilioEchevarria/tcwindfields"
Repository = "https://github.com/EmilioEchevarria/tcwindfields"
Issues = "https://github.com/EmilioEchevarria/tcwindfields/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tcwindfields*"]
